# cstar

./: .gitignore  README.md  cli.py  cstar.py  pyproject.toml
cstar/: __init__.py  classes.py  cli.py  funcs.py  lib.py  macros.py  renderer.py  semantics.py  transpiler.py  utils.py
cstar/cli/: cli.py
cstar/grammars/: eheaders.tatsu  onions.tatsu  taggedreturns.tatsu  unwrapping.tatsu
