[tool.poetry]
name = "cstar"
version = "0.1.0"
description = "C with additional useful constructs."
authors = ["StealthyPanda <shaikm259@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
cstar = "cstar.cli:main"
