[project]
name = "cstar"
version = "0.2.0"
description = "C with additional useful constructs"
authors = [
    {name = "StealthyPanda",email = "shaikm259@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tatsu (==5.15.1)",
    "typer (>=0.24.1,<0.25.0)"
]

[tool.poetry]
include = ["cstar/grammars/*.tatsu"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cstar = "cstar.cli:app"